footer spacing fix

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -614,6 +614,9 @@ video {
 .mt-64 {
 	margin-top: 16rem;
 }
+.mt-2 {
+	margin-top: 0.5rem;
+}
 .flex {
 	display: flex;
 }
